--- a/action.yml
+++ b/action.yml
@@ -51,5 +51,5 @@ runs:
     - ${{ inputs.ignore_commits_from_author }}
     - ${{ inputs.ignore_commits_grep }}
 branding:
-  icon: 'award'
-  color: 'green'
+  icon: "award"
+  color: "green"
